# adventure-bot

./: .gitignore  CMakeLists.txt  IO_pins.h  README.md  bot.h  main.c  modbus_rtu.c  modbus_rtu.h  serial.c  serial.h
brain/: CMakeLists.txt  brain.c
frimware/: CMakeLists.txt  adc.c  adc.h  avr.cmake  bot.h  main.c  modbus_rtu.c  serial.c  serial.h  servo.c  servo.h
img/: .~lock.bot.odg#  bot.odg
player-driver/: CMakeLists.txt  adventurebot.cpp  bot.cfg  bot_driver.cc
