CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
#====================================================================#
#  Setup Project                                                     #
#====================================================================#
PROJECT(bot)

ADD_SUBDIRECTORY(player-driver)
ADD_SUBDIRECTORY(frimware)
ADD_SUBDIRECTORY(brain)

